--- a/Group-A/login.css
+++ b/Group-A/login.css
@@ -6,6 +6,7 @@
 
 button {
   font-family: inherit;
+  background: inherit;
 }
 
 a {
@@ -49,11 +50,14 @@ body {
   font-weight: 400;
 }
 
+/* sale-wrapper end */
+/* header start */
+
 header {
+  z-index: 100;
   position: sticky;
   top: 0;
   background-color: #f7f7f8;
-  z-index: 2;
 }
 
 .header {
@@ -61,6 +65,8 @@ header {
   justify-content: space-between;
   padding: 20px 0 24px 0;
   align-items: center;
+  margin-bottom: 80px;
+  z-index: 2;
 }
 
 .header .left-side {
@@ -95,10 +101,42 @@ nav li {
   border-radius: 8px;
   font-size: 18px;
   font-weight: 400;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+}
+
+nav li .courses-open:hover {
+  visibility:visible;
+  opacity: 1;
+}
+
+nav li .courses:hover + .courses-open {
+  visibility:visible;
+  opacity: 1;
+}
+
+nav li .courses-open {
+  visibility: hidden;
+  opacity: 0;
+  transition: all 300ms linear;
+  position: absolute;
+  top: 39px;
+  padding-top: 12px;
+}
+
+nav li .courses-open span {
+  padding-top: 2px;
+  white-space: pre-line;
 }
 
 nav a {
   color: #262626;
+  transition: all 0.3s;
+}
+
+nav a:hover{
+  color: #ff9500;
 }
 
 .active {
@@ -117,11 +155,22 @@ nav a {
   border-radius: 8px;
   font-size: 18px;
   font-weight: 400;
+  transition: all 0.3s;
+}
+
+.header .right-side a:nth-child(1):hover{
+  color: #ff9500;
 }
 
 .header .right-side a:nth-child(2) {
   background-color: #ff9500;
   color: #fff;
+}
+
+.header .right-side a:nth-child(2):hover{
+  color: #ff9500;
+  border: 1px solid #ff9500;
+  background-color: inherit;
 }
 
 .header .right-side a:active {
@@ -153,6 +202,7 @@ nav a {
 
 footer {
   background: #fff;
+  bottom: 0;
   width: 100%;
 }
 
@@ -249,6 +299,7 @@ footer .bottom-side span {
   font-weight: 400;
 }
 
+
 @media screen and (max-width: 1440px) {
   .container {
     max-width: 1280px;
@@ -330,11 +381,11 @@ footer .bottom-side span {
 @media screen and (max-width: 1024px) {
   .container {
     max-width: calc(100%-32px);
-    padding: 0 20px;
+    padding: 0 16px;
   }
 
   .sale-wrapper {
-    padding: 10px 16px;
+    padding: 10px 13px;
     max-width: calc(100%-32px);
     margin: 40px 16px 0;
   }
@@ -430,113 +481,432 @@ footer .bottom-side span {
 }
 
 /* ---------------------MAIN--------------------------- */
-
-.sub-container .left-side .top h3 {
-  color: var(--grey-15, #262626);
-  font-family: Be Vietnam Pro;
-  font-size: 38px;
-  font-style: normal;
-  font-weight: 500;
-  line-height: 150%;
-  /* 57px */
-
+main {
+  margin-bottom: 150px;
 }
 
-.sub-container {
-  padding: 80px;
+.main-login{
   display: flex;
   justify-content: space-between;
-
+  align-items: center;
+  gap: 100px;
 }
 
-.sub-container .left-side .top p {
+main .left_side {
+  width: 829PX;
+}
+
+.birinci h1 {
+  font-size: 38px;
+  color: #262626;
+  font-weight: 500;
+  line-height: 150%;
+}
+
+.birinci p {
+  font-size: 18px;
   color: #59595A;
-  font-family: Be Vietnam Pro;
-  font-size: 18px;
   font-weight: 400;
   line-height: 150%;
-  margin-bottom: 80px;
+  padding-bottom: 80px;
 }
 
-.sub-container .left-side .top {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  gap: 6px;
-  align-self: stretch;
+.ikinci {
+  margin-bottom: 30px;
 }
 
-.user .p {
-  color: #4C4C4D;
-  font-family: Be Vietnam Pro;
-  font-size: 18px;
-  font-weight: 400;
-  line-height: 150%;
-  margin-top: 80px;
-
-}
-
-.right-side .login {
-  border-radius: 12px;
-  background: #FFF;
-  width: 660px;
+.ikinci p {
+  background-color: white;
   padding: 50px;
- 
 }
 
-.right-side .login p{
-  color: var(--grey-30, #4C4C4D);
-  text-align: center;
-  font-family: Be Vietnam Pro;
+.ikinci h1 {
   font-size: 18px;
-  font-weight: 400;
+  font-weight: 600;
+  line-height: 150%;
+  padding: 15px;
 }
 
-.login-info{
+.ikinci button {
   text-align: center;
-  margin-bottom: 50px;
-}
-
-.login-info h1{
-  margin-bottom: ;
-}
-
-
-.buton1 {
   font-size: 18px;
   font-weight: 500;
+  line-height: 150%;
+  color: #262626;
+  display: flex;
+  padding: 18px 24px;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
+  border-radius: 8px;
+  border: 1px solid #F1F1F3;
+  background-color: #F7F7F8;
+  cursor: pointer;
+
+}
+
+.ikinci .asagi {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding: 60px 50px;
+  background-color: #FFF;
+  height: 60px;
+
+}
+
+.ikinci .asagi .left-side {
+  display: flex;
+  flex-direction: row;
+
+}
+
+.ikinci .asagi .right-side {
+  padding: 0px;
+}
+
+.icon {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  gap: 15px;
+  height: 50px;
+}
+
+.icon img {
+  padding: 14px;
+  background: white;
+  cursor: pointer;
+}
+
+
+
+/* !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!rith!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! */
+
+main .right_side {
+  width: 660px;
+  padding: 50px;
+  background-color: #FFF;
+  border-radius: 12px;
+}
+
+.right_side .top-side h1 {
+  text-align: center;
+  margin-bottom: 12px;
+  font-size: 48px;
+  font-weight: 600;
+  line-height: normal;
+  color: #262626;
+}
+
+.right_side .top-side p {
+  text-align: center;
+  font-size: 18px;
+  font-weight: 400;
+  color: #4C4C4D;
+  margin-bottom: 50px;
+
+}
+
+.form {
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+}
+
+.form .form-element {
+  display: flex;
+  flex-direction: column;
+  gap: 14px;
+}
+
+input {
+  display: flex;
+  padding: 24px;
+  align-items: center;
+  gap: 10px;
+  align-self: stretch;
+  border-radius: 10px;
+  border: 1px solid;
+  background-color: #FCFCFD;
+}
+
+.check {
+  display: flex;
+  align-items: flex-start;
+  justify-content: baseline;
+  gap: 10px;
+}
+
+.lastInput {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  position: relative;
+}
+
+.lastInput input {
+  width: 100%;
+}
+
+.lastInput img {
+  position: absolute;
+  right: 24px;
+  cursor: pointer;
+}
+
+.forgot-pasword p {
+  color: #4C4C4D;
+  text-align: right;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 150%;
+  cursor: pointer;
+}
+
+.check p {
+  color: #656567;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 150%;
+}
+
+h3 {
   display: flex;
   padding: 18px 20px;
   align-items: center;
   gap: 10px;
   border-radius: 10px;
-  background: #FF9500;
-  color: #FFF;
-  font-family: Be Vietnam Pro;
-  width: 560px;
+  justify-content: center;
+  width: 100%;
+  background-color: #ff9500;
+  color: white;
+  font-size: 18px;
+  font-weight: 500;
+  line-height: 150%;
+  cursor: pointer;
 }
 
-.buton2 {
-  width: 560px;
+.line {
+  width: 100%;
+}
+
+.line p{
+  text-align: center;
+}
+
+.line p{
+  width: 100%;
+  height: 2px;
+  margin-top: 15px;
+  margin-bottom: 15px;
+  border: none;
+  border-top: 1px solid #E4E4E7;
+  position: relative;
+  color: var #98989A;
+  background: white;
+
+  }
+
+.google {
   display: flex;
   padding: 20px 24px;
   justify-content: center;
-  align-items: center;
+  align-items: baseline;
   gap: 14px;
+  font-size: 18px;
+  font-weight: 500;
+  line-height: 150%;
+  background-color: #F1F1F3;
   border-radius: 10px;
   border: 1px solid #F1F1F3;
-  background: #F7F7F8;
+  cursor: pointer;
 }
 
-.input-box input {
-  width: 560px;
+.google img {
+  width: 30px;
+  height: 30px;
   display: flex;
-padding: 24px;
-align-items: center;
-gap: 10px;
-align-self: stretch;
-border-radius: 10px;
-border: 1px solid var(--white-95, #F1F1F3);
-background: var(--white-99, #FCFCFD);
+  align-self: center;
 }
 
+.strelka {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 6px;
+  align-self: stretch;
+}
+
+.strelka ins{
+  cursor: pointer;
+}
+
+.left-side .right-side {
+  gap: 100px;
+  display: flex;
+
+}
+
+@media screen and (max-width: 1440px) {
+  .container {
+    max-width: 1280px;
+    margin: 80px auto 100px;
+  }
+
+  main {
+    display: flex;
+    gap: 80px;
+  }
+
+  main .left_side {
+    max-width: 659px;
+    height: 509px;
+  }
+
+  main .left_side .birinci p {
+    padding-bottom: 60px;
+    font-size: 16px;
+    line-height: 24px;
+  }
+
+  main .left_side .ikinci .asagi img {
+    width: 50px;
+    height: 50px;
+  }
+
+  main .left_side .ikinci p {
+    padding: 40px;
+  }
+
+  main .left_side .ikinci .asagi {
+    margin-bottom: 24px;
+  }
+
+  main .right_side {
+    width: 540px;
+    height: 816px;
+  }
+
+  main .right_side .top-side h1 {
+    font-size: 38px;
+  }
+
+  main .right_side .top-side p {
+    font-size: 16px;
+  }
+
+  main form {
+    padding: 40px;
+
+  }
+
+  main .form h3 {
+    padding: 14px 20px;
+  }
+
+  main .from .form-element {
+    gap: 20px;
+  }
+
+
+  main .form .google {
+    padding: 16px 24px;
+    gap: 24px;
+  }
+}
+
+
+
+@media screen and (max-width: 1024px) {
+
+  main {
+    display: flex;
+    flex-direction: column;
+    gap: 50px;
+    margin: 50px 0px;
+    padding: 30px;
+  }
+
+  main .left_side {
+    max-width: 357px;
+    height: 449px;
+  }
+
+  main .left_side h1 {
+    font-size: 28px;
+  }
+
+  main .left_side .birinci p {
+    padding-bottom: 40px;
+    font-size: 14px;
+    line-height: 21px;
+  }
+
+  main .left_side .ikinci .asagi img {
+    width: 50px;
+    height: 50px;
+  }
+
+  main .left_side .ikinci p {
+    font-size: 14px;
+    padding: 30px;
+  }
+
+  main .left_side .ikinci .asagi {
+    padding: 20px 30px;
+    display: flex;
+  }
+
+  main .left_side .ikinci .asagi h1 {
+    font-size: 16px;
+  }
+
+  main .left_side .ikinci .asagi button {
+    font-size: 14px;
+    padding: 14px 16px;
+  }
+
+  main .right_side {
+    max-width: 357px;
+    height: 786px;
+    /* order: -1; */
+  }
+
+  main .icon {
+    display: flex;
+    justify-content: center;
+  }
+
+  main .right_side .top-side h1 {
+    font-size: 38px;
+  }
+
+  main .right_side .top-side p {
+    font-size: 16px;
+  }
+
+  main form {
+    padding: 40px;
+
+  }
+
+  main .form h3 {
+    padding: 14px 20px;
+  }
+
+  main .from .form-element {
+    gap: 20px;
+  }
+  
+
+  main .form .google{
+    padding: 16px 24px;
+    gap: 24px;
+  }
+}
+
+  
